--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# MySQL
+spring.datasource.url=jdbc:mysql://164.90.222.161:25060/defaultdb?useSSL=true&requireSSL=true&clientCertificateKeyStoreUrl=classpath:keystore.jks&clientCertificateKeyStorePassword=Inicijalni1
+spring.datasource.username=doadmin
+spring.datasource.password=lsz03rc9mly3albo
